popular section done with responsive

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-2</title>
-    <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <!-- header and banner section  -->
     <header></header>
-    <main></main>
+    <!--  main section start -->
+    <main>
+      <!-- popular tours section -->
+      <section class="popular-tours-container">
+        <div class="popular-tours-left">
+          <h2 class="popular-tours-title">Our Popular Tours</h2>
+          <p class="popular-tours-content">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+          <li class="popular-tours-content">
+            Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam
+            odio neque diam. Sociis erat at .
+          </li>
+          <li class="popular-tours-content">
+            Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+            porta lacus. Lectus suspendisse nullam.
+          </li>
+          <li class="popular-tours-content">
+            Accumsan eget et turpis praesent lorem egestas enim elit bibendum.
+            Risus at in.
+          </li>
+          <p class="popular-tours-content">
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
+            semper tincidunt.
+          </p>
+          <button class="btn-primary">Read More</button>
+        </div>
+        <div class="popular-tours-right">
+          <img src="./Images/Rectangle 4.png" alt="" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
