--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
           <img src="./Images/Rectangle 4.png" alt="" />
         </div>
       </section>
+      <!-- popular section end -->
+      <!-- newsletter section -->
+      <section class="newsletter-container">
+        <div class="newsletter-content">
+            <h2 class="newsletter-title">Newsletter</h2>
+            <p class="newsletter-text">Get your daily dose of travel news & tips. Sign up today!</p>
+            <hr>
+            <input class="newsletter-input" placeholder="Enter your name" type="text">
+            <input class="newsletter-input" placeholder="Enter your email" type="text">
+            <button class="btn-primary subscribe">Subscribe</button>
+        </div>
+        <div class="newsletter-container-img">
+            <img src="./Images/Rectangle 8 (1).png" alt="">
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
