footer section done with responsive

--- a/index.html
+++ b/index.html
@@ -64,7 +64,22 @@
             <img src="./Images/Rectangle 8 (1).png" alt="">
         </div>
       </section>
+      <!-- newsletter section end -->
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer-head">
+            <img src="./Images/Group 40071 (2).png" alt="">
+            <h2 class="footer-title">Hero <span class="footer-span">Travel</span></h2>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <div>
+            <img src="./icons/facebook.png" alt="">
+            <img src="./icons/insta.png" alt="">
+            <img src="./icons/twitter.png" alt="">
+        </div>
+        <hr>
+        <p>2017, All Rights Reserved.</p>
+        
+    </footer>
   </body>
 </html>
