choose us section done with responsive

--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
         </div>
       </section>
       <!-- popular section end -->
+      <!-- Choose Us Section start -->
+      <section class="choose-us-container">
+        <h2 class="choose-us-container-title">
+            Why Choose Us
+        </h2>
+        <p class="choose-us-container-description">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="choose-us-container-upper">
+            <div class="hotels">
+                <img src="./icons/email.png" alt="">
+                <h2 class="hotel-title">Handpicked Hotels</h2>
+                <p class="hotel-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+            <div class="service">
+                <img src="./icons/projects.png" alt="">
+                <h2 class="service-title">World Class Service</h2>
+                <p class="service-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </div>
+        <div class="choose-us-container-down">
+            <div class="price">
+                <img src="./icons/email.png" alt="">
+                <h2 class="price-title">Handpicked Hotels</h2>
+                <p class="price-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.  </p>
+            </div>
+        </div>
+        <!-- Choose Us Section end -->
+      </section>
       <!-- newsletter section -->
       <section class="newsletter-container">
         <div class="newsletter-content">
@@ -66,6 +95,7 @@
       </section>
       <!-- newsletter section end -->
     </main>
+    <!-- footer section start -->
     <footer class="footer">
         <div class="footer-head">
             <img src="./Images/Group 40071 (2).png" alt="">
@@ -81,5 +111,6 @@
         <p>2017, All Rights Reserved.</p>
         
     </footer>
+    <!-- footer section end -->
   </body>
 </html>
