--- a/index.html
+++ b/index.html
@@ -50,66 +50,141 @@
         </div>
       </section>
       <!-- popular section end -->
+      <!-- destination section start -->
+      <section class="destination-container">
+        <div>
+          <h1 class="destination-container-title">Choose Your Destination</h1>
+          <p class="destination-container-description">
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="destination-img-container-1">
+            <img src="./Images/Rectangle 5.png" alt="">
+            <img src="./Images/Rectangle 8.png" alt="">
+        </div>
+        <div class="destination-img-container-2">
+            <img src="./Images/Rectangle 6.png" alt="">
+            <img src="./Images/Rectangle 7.png" alt="">
+            <img src="./Images/Rectangle 9.png" alt="">
+        </div>
+        <div class="destination-img-container-3">
+            <img src="./Images/Rectangle 11.png" alt="">
+            <img src="./Images/Rectangle 10.png" alt="">
+        </div>
+        <!-- ----------------------------- -->
+        <!-- <div class="destination-img-container">
+          <div class="destination-img-1">
+            <img src="./Images/Rectangle 5.png" alt="" />
+          </div>
+          <div class="destination-img-2">
+            <img src="./Images/Rectangle 8.png" alt="" />
+          </div>
+          <div class="destination-img-3">
+            <img src="./Images/Rectangle 6.png" alt="" />
+          </div>
+          <div class="destination-img-4">
+            <img src="./Images/Rectangle 7.png" alt="" />
+          </div>
+          <div class="destination-img-5">
+            <img src="./Images/Rectangle 9.png" alt="" />
+          </div>
+          <div class="destination-img-6">
+            <img src="./Images/Rectangle 11.png" alt="" />
+          </div>
+          <div class="destination-img-7">
+            <img src="./Images/Rectangle 10.png" alt="" />
+          </div>
+        </div> -->
+
+        <!-- ---------------------------- -->
+      </section>
       <!-- Choose Us Section start -->
       <section class="choose-us-container">
-        <h2 class="choose-us-container-title">
-            Why Choose Us
-        </h2>
+        <h2 class="choose-us-container-title">Why Choose Us</h2>
         <p class="choose-us-container-description">
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
         </p>
         <div class="choose-us-container-upper">
-            <div class="hotels">
-                <img src="./icons/email.png" alt="">
-                <h2 class="hotel-title">Handpicked Hotels</h2>
-                <p class="hotel-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-            </div>
-            <div class="service">
-                <img src="./icons/projects.png" alt="">
-                <h2 class="service-title">World Class Service</h2>
-                <p class="service-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-            </div>
+          <div class="hotels">
+            <img src="./icons/email.png" alt="" />
+            <h2 class="hotel-title">Handpicked Hotels</h2>
+            <p class="hotel-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="service">
+            <img src="./icons/projects.png" alt="" />
+            <h2 class="service-title">World Class Service</h2>
+            <p class="service-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
         </div>
         <div class="choose-us-container-down">
-            <div class="price">
-                <img src="./icons/email.png" alt="">
-                <h2 class="price-title">Handpicked Hotels</h2>
-                <p class="price-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.  </p>
-            </div>
+          <div class="price">
+            <img src="./icons/email.png" alt="" />
+            <h2 class="price-title">Handpicked Hotels</h2>
+            <p class="price-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
         </div>
         <!-- Choose Us Section end -->
       </section>
       <!-- newsletter section -->
       <section class="newsletter-container">
         <div class="newsletter-content">
-            <h2 class="newsletter-title">Newsletter</h2>
-            <p class="newsletter-text">Get your daily dose of travel news & tips. Sign up today!</p>
-            <hr>
-            <input class="newsletter-input" placeholder="Enter your name" type="text">
-            <input class="newsletter-input" placeholder="Enter your email" type="text">
-            <button class="btn-primary subscribe">Subscribe</button>
+          <h2 class="newsletter-title">Newsletter</h2>
+          <p class="newsletter-text">
+            Get your daily dose of travel news & tips. Sign up today!
+          </p>
+          <hr />
+          <input
+            class="newsletter-input"
+            placeholder="Enter your name"
+            type="text"
+          />
+          <input
+            class="newsletter-input"
+            placeholder="Enter your email"
+            type="text"
+          />
+          <button class="btn-primary subscribe">Subscribe</button>
         </div>
         <div class="newsletter-container-img">
-            <img src="./Images/Rectangle 8 (1).png" alt="">
+          <img src="./Images/Rectangle 8 (1).png" alt="" />
         </div>
       </section>
       <!-- newsletter section end -->
     </main>
     <!-- footer section start -->
     <footer class="footer">
-        <div class="footer-head">
-            <img src="./Images/Group 40071 (2).png" alt="">
-            <h2 class="footer-title">Hero <span class="footer-span">Travel</span></h2>
-        </div>
-        <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
-        <div>
-            <img src="./icons/facebook.png" alt="">
-            <img src="./icons/insta.png" alt="">
-            <img src="./icons/twitter.png" alt="">
-        </div>
-        <hr>
-        <p>2017, All Rights Reserved.</p>
-        
+      <div class="footer-head">
+        <img src="./Images/Group 40071 (2).png" alt="" />
+        <h2 class="footer-title">
+          Hero <span class="footer-span">Travel</span>
+        </h2>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae
+        blandit orci potenti vulputate. Leo erat maecenas vitae elementum
+        ultricies nullam.
+      </p>
+      <div>
+        <img src="./icons/facebook.png" alt="" />
+        <img src="./icons/insta.png" alt="" />
+        <img src="./icons/twitter.png" alt="" />
+      </div>
+      <hr />
+      <p>2017, All Rights Reserved.</p>
     </footer>
     <!-- footer section end -->
   </body>
