--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
   </head>
   <body>
     <!-- header and banner section  -->
-    <header></header>
+    <header>
+      <section class="banner-section">
+        <h1 class="banner-section-title">Explore Your Travel</h1>
+        <p class="banner-section-description">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+        <div class="banner-input">
+          <input class="input-field" placeholder="Where to go" type="text">
+          <input class="input-field" placeholder="When" type="text">
+          <input class="input-field" placeholder="How many persons +" type="text">
+          <button class="banner-section-btn">Find Now</button>
+        </div>
+      </section>
+    </header>
     <!--  main section start -->
     <main>
       <!-- popular tours section -->
