--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
+    <script src="https://kit.fontawesome.com/932a40fb4e.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <!-- header and banner section  -->
     <header>
+      <section class="nav-bar">
+        <nav class="nav-left">
+          <img src="./Images/Group 40071 (2).png" alt="">
+          <h2 class="company-name">
+            Nomad<span class="span-company">Nexus</span>
+          </h2>
+        </nav>
+        <ul class="parent">
+          <li class="child">Home</li>
+          <li class="child">About</li>
+          <li class="child">Contact</li>
+          <li class="child">Blog</li>
+        </ul>
+      </section>
       <section class="banner-section">
         <h1 class="banner-section-title">Explore Your Travel</h1>
         <p class="banner-section-description">Traveling is a diverse and enriching experience that allows individuals to explore new places, cultures, and perspectives. </p>
@@ -22,7 +38,7 @@
           <input class="input-field" placeholder="Where to go" type="text">
           <input class="input-field" placeholder="When" type="text">
           <input class="input-field" placeholder="How many persons +" type="text">
-          <button class="banner-section-btn">Find Now</button>
+          <button class="banner-section-btn"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
         </div>
       </section>
     </header>
@@ -141,7 +157,7 @@
       <div class="footer-head">
         <img src="./Images/Group 40071 (2).png" alt="" />
         <h2 class="footer-title">
-          Hero <span class="footer-span">Travel</span>
+          Nomad<span class="footer-span">Nexus</span>
         </h2>
       </div>
       <p>
